--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,21 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="360"
+    android:viewportHeight="360"
+    android:autoMirrored="true">
+  <group android:scaleX="0.73"
+      android:scaleY="0.73"
+      android:translateX="48.6"
+      android:translateY="48.6">>
+
+      <group>
+              
+          <clip-path android:pathData="M41.77,87L318,87L318,281.18L41.77,281.18ZM41.77,87"/>
+              
+          <path android:fillColor="#fd6700" android:fillType="nonZero" android:pathData="M291.15,148.44C283.91,139.83 258,114.46 204.52,107.2C201.05,106.73 195.83,106.35 190.09,106.07L190.89,97.86C193.87,96.7 195.74,95.12 195.74,93.35C195.74,89.85 188.54,87.02 179.66,87.02C170.77,87.02 163.57,89.85 163.57,93.35C163.57,95.12 165.44,96.7 168.42,97.86L169.2,105.66C163.41,105.71 158.29,105.92 155.17,106.35C101,112.29 74.77,140.38 68.15,148.82C75.47,155.25 117.34,169.68 179.86,169.68C240.87,169.68 282.2,155.94 291.15,148.44ZM289.91,188.81C291.09,185.5 292.45,181.32 292.52,181.05L301.99,180.91L302.39,187.65ZM57.2,187.65L57.6,180.91L67.07,181.05C67.14,181.32 68.5,185.5 69.68,188.81ZM316.36,172.96C316.13,168.99 312.84,165.88 308.85,165.99C308.85,165.99 289.15,166.24 289.15,166.21C265.1,177.5 220.9,184.49 179.86,184.49C138.54,184.49 94,177.41 70.07,165.99C70.09,166.09 50.75,165.99 50.75,165.99C46.75,165.88 43.46,168.99 43.23,172.96L42,193.94C41.76,197.92 44.73,201.38 48.71,201.74L77.27,204.37C81.9,228.41 86.23,249.4 88,254.28C90.68,261.67 122.96,281.1 179.87,281.1C234.54,281.1 268.89,260.38 271.81,254.09C273.44,249.91 277.69,228.66 282.25,204.18L310.88,201.74C314.86,201.38 317.83,197.92 317.6,193.94L316.36,172.96" android:strokeColor="#00000000"/>
+            
+      </group>
+      
+  </group>
 </vector>
