--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="orange_test">#F79E68</color>
     <color name="orange_test_two">#F78D68</color>
     <color name="personal_gray">#919191</color>
+    <color name ="personal_pink">#FB3049</color>
 </resources>
